--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>{{ site.title }}</title>
-		<link rel="stylesheet" href="{{ "/assets/style.css" | prepend: site.baseurl }}">
-		<link rel="icon" type="image/x-icon" href="/assets/favicon.ico"/>
+		<link rel="stylesheet" href="{{ "assets/style.css" | prepend: site.baseurl }}">
+		<link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
 	</head>	
 <body>
 	<!--<div style="width: 64px; height: 64px; box-sizing: border-box; padding: 12px;"><div style="background-color: #52748c; border-top-right-radius: 10px; height: 100%; width: 100%;"></div></div>-->
